--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <li class="advantages-main-item blue-block">
             <div class="blue-block-main">
               <div class="advantage-container-big">
-                <h3 class="heading-small">Настоящий<br>городок</h3>
+                <h3 class="advantages-title heading-small">Настоящий<br>городок</h3>
                 <p class="advantages-number">— №1 —</p>
                 <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
@@ -83,19 +83,19 @@
             <ul class="advantages-sub-list blue-block-sub">
               <li class="advantages-sub-item white-blue-block">
                 <div class="advantage-container-sub icon-housing">
-                  <h4 class="heading-small">Жильё</h4>
+                  <h4 class="advantages-title heading-small">Жильё</h4>
                   <p class="advantages-description">Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!</p>
                 </div>
               </li>
               <li class="advantages-sub-item">
                 <div class="advantage-container-sub icon-food">
-                  <h4 class="heading-small">Еда</h4>
+                  <h4 class="advantages-title heading-small">Еда</h4>
                   <p class="advantages-description">Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!</p>
                 </div>
               </li>
               <li class="advantages-sub-item white-blue-block">
                 <div class="advantage-container-sub icon-souvenirs">
-                  <h4 class="heading-small">Сувениры</h4>
+                  <h4 class="advantages-title heading-small">Сувениры</h4>
                   <p class="advantages-description">Не только китайского,<br>но и настоящего местного производства!</p>
                 </div>
               </li>
@@ -104,7 +104,7 @@
           <li class="advantages-main-item blue-block">
             <div class="blue-block-main">
               <div class="advantage-container-big">
-                <h3 class="heading-small">Там есть <br>мост дьявола</h3>
+                <h3 class="advantages-title heading-small">Там есть <br>мост дьявола</h3>
                 <p class="advantages-number">— №2 —</p>
                 <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
@@ -113,21 +113,21 @@
           </li>
           <li class="advantages-main-item white-blue-block">
             <div class="advantage-container">
-              <h3 class="heading-small">Небольшая<br>площадь</h3>
+              <h3 class="advantages-title heading-small">Небольшая<br>площадь</h3>
               <p class="advantages-number">— №3 —</p>
               <p class="advantages-description">Все достопримечательности находятся очень близко</p>
             </div>
           </li>
           <li class="advantages-main-item grey-blue-block">
             <div class="advantage-container">
-              <h3 class="heading-small">Красивая<br>дорога</h3>
+              <h3 class="advantages-title heading-small">Красивая<br>дорога</h3>
               <p class="advantages-number">— №4 —</p>
               <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </div>
           </li>
           <li class="advantages-main-item white-blue-block">
             <div class="advantage-container">
-              <h3 class="heading-small">Мало<br>туристов</h3>
+              <h3 class="advantages-title heading-small">Мало<br>туристов</h3>
               <p class="advantages-number">— №5 —</p>
               <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </div>
