Работа с пиксель перфект

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>HTML Academy: Седона</title>
   </head>
 
-  <body class="page-container">
+  <body>
+  <div class="page-container">
 
     <!--ШАПКА-->
     <header class="page-header">
@@ -262,8 +263,9 @@
           <button class="modal-button" type="submit">Найти</button>
         </form>
       </div>
-
     </div>
+
+  </div>
   </body>
 
 </html>
