--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <link href="styles/styles.css" rel="stylesheet">
+    <link href="./images/favicon.ico" rel="icon"> <!-- 16×16 -->
 
     <title>HTML Academy: Седона</title>
   </head>
