Правки после проверки валидатором

--- a/catalog.html
+++ b/catalog.html
@@ -160,6 +160,7 @@
                         </button>
                       </div>
                     </div>
+                  </div>
                 </fieldset>
                 <div class="group-buttons">
                   <button class="button submit" type="submit">Применить</button>
