--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,8 @@
 
   <head>
     <meta charset="utf-8">
-    <link href="styles/styles.css" rel="stylesheet">
-    <link href="./images/favicon.ico" rel="icon"> <!-- 16×16 -->
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="favicon.ico">
 
     <title>HTML Academy: Седона</title>
   </head>
