Поправил в соответствии с критериями

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <li class="advantages-sub-item white-blue-block">
                 <div class="advantage-container-sub icon-housing">
                   <h4 class="advantages-title heading-small">Жильё</h4>
-                  <p class="advantages-description">Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!</p>
+                  <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
                 </div>
               </li>
               <li class="advantages-sub-item">
