--- a/catalog.html
+++ b/catalog.html
@@ -85,22 +85,22 @@
                   <legend class="catalog-filter-title">Инфраструктура:</legend>
                   <ul class="catalog-filter-list">
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="control-input visually-hidden" type="checkbox" name="pool" checked>
+                      <label class="control-checkbox">
+                        <input class="control-input-checkbox visually-hidden" type="checkbox" name="pool" checked>
                         <span class="control-mark"></span>
                         <span class="control-label">Бассейн</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="control-input visually-hidden" type="checkbox" name="parking" checked>
+                      <label class="control-checkbox">
+                        <input class="control-input-checkbox visually-hidden" type="checkbox" name="parking" checked>
                         <span class="control-mark"></span>
                         <span class="control-label">Парковка</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="control-input visually-hidden" type="checkbox" name="wifi">
+                      <label class="control-checkbox">
+                        <input class="control-input-checkbox visually-hidden" type="checkbox" name="wifi">
                         <span class="control-mark"></span>
                         <span class="control-label">Wi-Fi</span>
                       </label>
@@ -111,22 +111,22 @@
                   <legend class="catalog-filter-title">Тип жилья:</legend>
                   <ul class="catalog-filter-list">
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="control-input visually-hidden" type="radio" name="hotel-type" value="hotel" checked>
+                      <label class="control-radio">
+                        <input class="control-input-radio visually-hidden" type="radio" name="hotel-type" value="hotel" checked>
                         <span class="control-mark"></span>
                         <span class="control-label">Гостиница</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="control-input visually-hidden" type="radio" name="hotel-type" value="motel">
+                      <label class="control-radio">
+                        <input class="control-input-radio visually-hidden" type="radio" name="hotel-type" value="motel">
                         <span class="control-mark"></span>
                         <span class="control-label">Мотель</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="control-input visually-hidden" type="radio" name="hotel-type" value="apartments">
+                      <label class="control-radio">
+                        <input class="control-input-radio visually-hidden" type="radio" name="hotel-type" value="apartments">
                         <span class="control-mark"></span>
                         <span class="control-label">Апартаменты</span>
                       </label>
