--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <nav class="navigation">
 
         <!--ЛОГОТИП-->
-        <a class="navigation-logo">
-          <img class="page-header-logo" src="./images/logo.svg" width="139" height="70" alt="Логотип Город Седона">
+        <a class="navigation-logo" href="index.html">
+          <img class="page-header-logo" src="./images/logo.svg" width="139" height="70" alt="Логотип Город Седона.">
         </a>
 
         <!--ОСНОВНАЯ НАВИГАЦИЯ-->
@@ -63,7 +63,7 @@
       <section class="promo">
         <h2 class="visually-hidden">О городе Седона</h2>
         <div class="promo-image-container">
-          <img class="promo-image" src="./images/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
+          <img class="promo-image" src="./images/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!.">
         </div>
         <p class="promo-text">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
       </section>
@@ -80,7 +80,7 @@
                 <p class="advantages-number">— №1 —</p>
                 <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
-              <img class="blue-block-image-end" src="images/advantage-1.jpeg" width="800" height="384" alt="Улица в Седоне">
+              <img class="blue-block-image-end" src="images/advantage-1.jpeg" width="800" height="384" alt="Улица в Седоне.">
             </div>
             <ul class="advantages-sub-list blue-block-sub">
               <li class="advantages-sub-item white-blue-block">
@@ -110,7 +110,7 @@
                 <p class="advantages-number">— №2 —</p>
                 <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
-              <img class="blue-block-image-start" src="images/advantage-2.jpeg" width="800" height="384" alt="Каньон в Седоне">
+              <img class="blue-block-image-start" src="images/advantage-2.jpeg" width="800" height="384" alt="Каньон в Седоне.">
             </div>
           </li>
           <li class="advantages-main-item white-blue-block">
@@ -150,7 +150,7 @@
         <p class="subscription-description">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
         <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="get">
           <label for="subscription-form-email" class="visually-hidden">Введите Ваш e-mail</label>
-          <input class="subscription-input" type="email" name="subscription-form" id="subscription-form-email" placeholder="Ваш e-mail">
+          <input class="subscription-input" type="email" name="subscription-form" id="subscription-form-email" placeholder="Ваш e-mail" required>
           <button class="button subscribe" type="submit">Подписаться</button>
         </form>
       </section>
@@ -162,7 +162,7 @@
         <li class="footer-social-item">
           <a class="footer-social-link" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Вконтакте</span>
-            <svg class="footer-social-icon" aria-hidden="true" focusable="false" width="25" height="14" xmlns="http://www.w3.org/2000/svg">
+            <svg class="footer-social-icon" role="img" aria-label="Иконка Вконтакте." aria-hidden="true" focusable="false" width="25" height="14" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M23.95.95c.17-.55 0-.95-.8-.95h-2.62c-.67 0-.98.35-1.14.73 0 0-1.34 3.2-3.23 5.27-.61.6-.89.8-1.22.8-.17 0-.42-.2-.42-.74V.95c0-.66-.19-.95-.74-.95H9.65c-.42 0-.67.3-.67.6 0 .61.95.76 1.05 2.5v3.8c0 .84-.16.99-.5.99-.88 0-3.05-3.21-4.33-6.89-.25-.71-.5-1-1.17-1H1.4C.65 0 .5.35.5.73c0 .68.89 4.07 4.14 8.55C6.81 12.34 9.87 14 12.65 14c1.67 0 1.88-.37 1.88-1v-2.32c0-.73.16-.88.68-.88.4 0 1.06.2 2.62 1.67C19.61 13.22 19.9 14 20.9 14h2.63c.75 0 1.13-.37.91-1.1-.24-.72-1.09-1.77-2.22-3.02-.6-.7-1.53-1.47-1.8-1.86-.4-.49-.28-.7 0-1.14 0 0 3.2-4.43 3.53-5.93Z"/>
             </svg>
           </a>
@@ -170,7 +170,7 @@
         <li class="footer-social-item">
           <a class="footer-social-link" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Telegram</span>
-            <svg class="footer-social-icon" aria-hidden="true" focusable="false" width="19" height="16" xmlns="http://www.w3.org/2000/svg">
+            <svg class="footer-social-icon" role="img" aria-label="Иконка Telegram." aria-hidden="true" focusable="false" width="19" height="16" xmlns="http://www.w3.org/2000/svg">
               <path d="M17.29.1 1.34 6.25c-1.09.43-1.08 1.04-.2 1.31l4.1 1.28 9.47-5.98c.44-.27.85-.12.52.18L7.55 9.96l-.28 4.22c.41 0 .6-.19.83-.41l1.99-1.93 4.13 3.05c.77.42 1.31.2 1.5-.7l2.72-12.8C18.72.27 18-.23 17.29.09Z"/>
             </svg>
           </a>
@@ -178,7 +178,7 @@
         <li class="footer-social-item">
           <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">YouTube</span>
-            <svg class="footer-social-icon" aria-hidden="true" focusable="false" width="23" height="18" xmlns="http://www.w3.org/2000/svg">
+            <svg class="footer-social-icon" role="img" aria-label="Иконка YouTube." aria-hidden="true" focusable="false" width="23" height="18" xmlns="http://www.w3.org/2000/svg">
               <path d="M19.107.5H3.674C1.814.5.5 2.094.5 3.9v10.094c0 1.912 1.314 3.506 3.174 3.506h15.652c1.642 0 3.174-1.594 3.174-3.4V3.9C22.281 2.094 20.968.5 19.107.5ZM8.162 13.037V4.963L15.495 9l-7.333 4.037Z"/>
             </svg>
           </a>
@@ -186,8 +186,8 @@
       </ul>
       <a class="phone" href="tel:88128121212">+7 (812) 812-12-12</a>
       <a class="footer-htmlacademy-link" href="https://htmlacademy.ru/">
-        <span class="visually-hidden">Логотип HTML Academy</span>
-        <svg class="htmlacademy-logo" aria-hidden="true" focusable="false" width="115" height="33" xmlns="http://www.w3.org/2000/svg">
+        <span class="visually-hidden">HTML Academy</span>
+        <svg class="htmlacademy-logo" role="img" aria-label="Логотип HTML Academy." aria-hidden="true" focusable="false" width="115" height="33" xmlns="http://www.w3.org/2000/svg">
           <path d="M0 12.9v2.6h2.5v-2.6H0ZM11.6 4.5c-1.6 0-2.8.7-3.6 1.7h-.1V0h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.4c.1-3-1.8-4.9-4.5-4.9ZM26.6 4.8h-4.8V1.1h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V6.8h4.8v-2ZM41.1 4.6c-1.6 0-2.9.8-3.5 2.1h-.1a3.7 3.7 0 0 0-3.4-2.1c-1.4 0-2.5.8-3.1 1.8h-.1V4.8H29v10.6h2V10c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2V9.8c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V8.9c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 12.7c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V0h-2v12.7ZM28.9 19.7a4.9 4.9 0 0 0-3.9-1.8c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3 3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6 1.6 0 2.8 1 3.3 2.2h2.1V22ZM55.1 19.7a4.9 4.9 0 0 0-3.9-1.8c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 19.8a5 5 0 0 0-3.9-1.9c-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.4h-2v6.4Zm-3.6 7.3a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 17.9a5.4 5.4 0 0 0-5.5 5.6c0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5a3.2 3.2 0 0 1 3.2-2.6ZM98.2 17.9a4 4 0 0 0-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"/>
         </svg>
       </a>
@@ -224,13 +224,13 @@
                 <input class="input-adult-amount" type="number" id="modal-adult-amount" name="modal-adult-amount" placeholder="2" required>
                 <button class="button-amount amount-less">
                   <span class="visually-hidden">Меньше</span>
-                  <svg class="icon-minus" aria-hidden="true" focusable="false" width="13" height="1" xmlns="http://www.w3.org/2000/svg">
+                  <svg class="icon-minus" role="img" aria-label="Знак минус." aria-hidden="true" focusable="false" width="13" height="1" xmlns="http://www.w3.org/2000/svg">
                     <path d="M0 0v1h13V0H0Z" fill="#000"/>
                   </svg>
                 </button>
                 <button class="button-amount amount-more">
                   <span class="visually-hidden">Больше</span>
-                  <svg class="icon-plus"  aria-hidden="true" focusable="false" width="13" height="13" xmlns="http://www.w3.org/2000/svg">
+                  <svg class="icon-plus" role="img" aria-label="Знак плюс." aria-hidden="true" focusable="false" width="13" height="13" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 6H7V0H6v6H0v1h6v6h1V7h6V6Z"/>
                   </svg>
                 </button>
@@ -248,13 +248,13 @@
                 <input class="input-child-amount" type="number" id="modal-child-amount" name="modal-child-amount" placeholder="1" required>
                 <button class="button-amount amount-less">
                   <span class="visually-hidden">Меньше</span>
-                  <svg class="icon-minus" aria-hidden="true" focusable="false" width="13" height="1" xmlns="http://www.w3.org/2000/svg">
+                  <svg class="icon-minus" role="img" aria-label="Знак минус." aria-hidden="true" focusable="false" width="13" height="1" xmlns="http://www.w3.org/2000/svg">
                     <path d="M0 0v1h13V0H0Z" fill="#000"/>
                   </svg>
                 </button>
                 <button class="button-amount amount-more">
                   <span class="visually-hidden">Больше</span>
-                  <svg class="icon-plus"  aria-hidden="true" focusable="false" width="13" height="13" xmlns="http://www.w3.org/2000/svg">
+                  <svg class="icon-plus" role="img" aria-label="Знак плюс." aria-hidden="true" focusable="false" width="13" height="13" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 6H7V0H6v6H0v1h6v6h1V7h6V6Z"/>
                   </svg>
                 </button>
