Правки по результатам 2ой проверки

--- a/catalog.html
+++ b/catalog.html
@@ -30,7 +30,7 @@
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link current-site-page">Гостиницы</a>
+            <a class="navigation-link current-site-page" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
 
@@ -72,7 +72,7 @@
               </a>
             </li>
             <li class="breadcrumbs-item breadcrumbs-current">
-              <a class="breadcrumbs-link">Гостиницы</a>
+              <a class="breadcrumbs-link" href="catalog.html">Гостиницы</a>
             </li>
           </ol>
 
@@ -152,10 +152,10 @@
                   <div class="range">
                     <div class="range-scale">
                       <div class="range-bar">
-                        <button class="range-toggle toggle-min">
+                        <button class="range-toggle toggle-min" type="button">
                           <span class="visually-hidden">Изменить минимальную цену.</span>
                         </button>
-                        <button class="range-toggle toggle-max">
+                        <button class="range-toggle toggle-max" type="button">
                           <span class="visually-hidden">Изменить максимальную цену.</span>
                         </button>
                       </div>
@@ -183,7 +183,7 @@
           </select>
           <ul class="view-control-list">
             <li class="view-control-item">
-              <a class="button-view toggle-card view-current">
+              <a class="button-view toggle-card view-current" href="#">
                 <span class="visually-hidden">Показать карточки</span>
               </a>
             </li>
@@ -215,7 +215,7 @@
               <dd class="hotel-price">От 4000 ₽</dd>
             </dl>
             <a class="button-link hotel-card-detail" href="#">подробнее</a>
-            <button class="button favorite">в избранное</button>
+            <button class="button favorite" type="button">в избранное</button>
             <div class="hotel-stars stars-4">
               <span class="visually-hidden">4 звезды</span>
             </div>
@@ -231,7 +231,7 @@
               <dd class="hotel-price">От 5000 ₽</dd>
             </dl>
             <a class="button-link hotel-card-detail" href="#">подробнее</a>
-            <button class="button favorite add">в избранном</button>
+            <button class="button favorite add" type="button">в избранном</button>
             <div class="hotel-stars stars-4">
               <span class="visually-hidden">4 звезды</span>
             </div>
@@ -247,7 +247,7 @@
               <dd class="hotel-price">От 2500 ₽</dd>
             </dl>
             <a class="button-link hotel-card-detail" href="#">подробнее</a>
-            <button class="button favorite">в избранное</button>
+            <button class="button favorite" type="button">в избранное</button>
             <div class="hotel-stars stars-3">
               <span class="visually-hidden">3 звезды</span>
             </div>
@@ -263,7 +263,7 @@
               <dd class="hotel-price">От 1500 ₽</dd>
             </dl>
             <a class="button-link hotel-card-detail" href="#">подробнее</a>
-            <button class="button favorite">в избранное</button>
+            <button class="button favorite" type="button">в избранное</button>
             <div class="hotel-stars stars-2">
               <span class="visually-hidden">2 звезды</span>
             </div>
@@ -275,7 +275,7 @@
           <!--ПАГИНАЦИЯ-->
           <ul class="pagination">
             <li class="pagination-item">
-              <a class="pagination-link pagination-current">1</a>
+              <a class="pagination-link pagination-current" href="#">1</a>
             </li>
             <li class="pagination-item">
               <a class="pagination-link" href="#">2</a>
